// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`formatHeatmapData should return formatted data 1`] = `
[
  {
    "backgroundColor": "rgb(255, 255, 255)",
    "foregroundColor": "#000",
    "value": 100,
    "x": 0,
    "y": 0,
  },
  {
    "backgroundColor": "rgb(179, 179, 179)",
    "foregroundColor": "#000",
    "value": 73,
    "x": 0,
    "y": 1,
  },
  {
    "backgroundColor": "rgb(255, 255, 255)",
    "foregroundColor": "#000",
    "value": 100,
    "x": 1,
    "y": 1,
  },
  {
    "backgroundColor": "rgb(179, 179, 179)",
    "foregroundColor": "#000",
    "value": 73,
    "x": 0,
    "y": 2,
  },
  {
    "backgroundColor": "rgb(248, 248, 248)",
    "foregroundColor": "#000",
    "value": 98,
    "x": 1,
    "y": 2,
  },
  {
    "backgroundColor": "rgb(255, 255, 255)",
    "foregroundColor": "#000",
    "value": 100,
    "x": 2,
    "y": 2,
  },
  {
    "backgroundColor": "rgb(0, 0, 0)",
    "foregroundColor": "#fff",
    "value": 8,
    "x": 0,
    "y": 3,
  },
  {
    "backgroundColor": "rgb(163, 163, 163)",
    "foregroundColor": "#000",
    "value": 67,
    "x": 1,
    "y": 3,
  },
  {
    "backgroundColor": "rgb(163, 163, 163)",
    "foregroundColor": "#000",
    "value": 67,
    "x": 2,
    "y": 3,
  },
  {
    "backgroundColor": "rgb(255, 255, 255)",
    "foregroundColor": "#000",
    "value": 100,
    "x": 3,
    "y": 3,
  },
]
`;

exports[`formatClustermapData should return formatted data 1`] = `
[
  {
    "backgroundColor": "hsl(137.5, 85%, 50%)",
    "foregroundColor": "#000",
    "value": 100,
    "x": 0,
    "y": 0,
  },
  {
    "backgroundColor": "rgb(245, 245, 245)",
    "foregroundColor": "#000",
    "value": 72.6,
    "x": 0,
    "y": 1,
  },
  {
    "backgroundColor": "hsl(275, 85%, 50%)",
    "foregroundColor": "#fff",
    "value": 100,
    "x": 1,
    "y": 1,
  },
  {
    "backgroundColor": "rgb(245, 245, 245)",
    "foregroundColor": "#000",
    "value": 72.62,
    "x": 0,
    "y": 2,
  },
  {
    "backgroundColor": "hsl(275, 85%, 50%)",
    "foregroundColor": "#fff",
    "value": 97.61,
    "x": 1,
    "y": 2,
  },
  {
    "backgroundColor": "hsl(275, 85%, 50%)",
    "foregroundColor": "#fff",
    "value": 100,
    "x": 2,
    "y": 2,
  },
  {
    "backgroundColor": "rgb(245, 245, 245)",
    "foregroundColor": "#000",
    "value": 8.2,
    "x": 0,
    "y": 3,
  },
  {
    "backgroundColor": "rgb(245, 245, 245)",
    "foregroundColor": "#000",
    "value": 66.99,
    "x": 1,
    "y": 3,
  },
  {
    "backgroundColor": "rgb(245, 245, 245)",
    "foregroundColor": "#000",
    "value": 66.88,
    "x": 2,
    "y": 3,
  },
  {
    "backgroundColor": "hsl(52.5, 85%, 50%)",
    "foregroundColor": "#000",
    "value": 100,
    "x": 3,
    "y": 3,
  },
]
`;
